--- a/assets/css/contactStyles.css
+++ b/assets/css/contactStyles.css
@@ -4,6 +4,7 @@
     background-size: cover;
     background-position: center;
     padding-bottom: 10vh;
+    margin-bottom: 10vh;
 }
 #contactContentContainer{
     margin-left: 2.5rem;
@@ -85,10 +86,6 @@
     transform: scale(1.3) rotate(6deg);
     box-shadow: 0 4px 25px rgba(24, 119, 242, 0.8);
     background: conic-gradient(
-        /* #FBBC05 0deg 90deg,
-        #EA4335 90deg 180deg,
-        #4285F4 180deg 270deg,
-        #34A853 270deg 360deg */
         #EA4335 0deg 90deg,
         #4285F4 90deg 180deg,
         #34A853 180deg 270deg,
@@ -146,7 +143,8 @@
     border: #4d4df4 1px solid;
     box-shadow: 0px 0px 5px #4d4df4;
     margin-top: 1.5rem;
-    font-size: 1.1rem;
+    font-size: 1.2rem;
+    font-weight: 500;
     width: 45%;
     border-radius: 12px;
     transition: 0.5s ease-in-out;
