--- a/assets/css/skillSectionStyles.css
+++ b/assets/css/skillSectionStyles.css
@@ -4,7 +4,6 @@
     background-size: cover;
     background-position: center;
 }
-
 #skillsContentContainer{
     margin-left: 2.5rem;
     margin-right: 2.5rem;
@@ -52,24 +51,16 @@
     display: none;
 }
 
-#imgWithDesc{
-    display: flex;
-    flex-direction: row;
-    gap: 2.5rem;
-    justify-content: space-evenly;
-    margin-bottom: 3rem;
-}
-#slideshowImage{
-    margin-right: 1rem;
-}
+
 .skillsImage{
-    width: 500px;
+    width: 40vw;
     box-shadow: 0px 0px 5px #4d4df4;
     border-radius: 28px;
     height: auto;
 }
 #slideshowDesc{
     color: whitesmoke;
+    margin-top: 6vh;
 }
 #slideshowDesc h1{
     font-size: 2rem;
@@ -88,11 +79,9 @@
     padding-left: 1rem;
     margin-top: 1rem;
 }
-
 #pointedSkillSetMediumViewportSkills{
     display: none;
 }
-
 .imageSlide{
     background-color: #2B2F3B;
     font-size: 1.5rem;
